--- a/clip_depth/coral_maps.Rmd
+++ b/clip_depth/coral_maps.Rmd
@@ -75,7 +75,7 @@ if(!file.exists(file.path(dir_git, 'clip_depth', 'bathy_cells.csv'))) {
 bath_df <-  read_csv(file.path(dir_git, 'clip_depth', 'bathy_cells.csv'), col_types = 'dd') %>%
   filter(weight >= 1) %>% ### cell must be 100% within the deep polygon to count as deep
   mutate(deep = 1) %>%
-  select(-weight)
+  dplyr::select(-weight)
 
 spp_depth <- read_csv(file.path(dir_git, 'clip_depth', 'coral_spp_depth.csv'))
 
@@ -85,7 +85,7 @@ coral_files <- list.files(file.path(dir_anx, 'v2016', 'iucn_intersections'),
                           full.names = TRUE)
 coral_cells_iucn <- lapply(coral_files, read_csv) %>%
   bind_rows() %>%
-  select(iucn_sid, loiczid = LOICZID) %>%
+  dplyr::select(iucn_sid, loiczid = LOICZID) %>%
   # filter(iucn_sid %in% spp_depth$iucn_sid[spp_depth$paired_map]) %>%
   left_join(bath_df, by = 'loiczid') %>%
   mutate(deep = ifelse(is.na(deep), 0, deep))
@@ -142,7 +142,7 @@ if(!file.exists(file.path(dir_git, 'clip_depth', 'coral_spp_depth.csv'))) {
   write_csv(spp_narr, file.path(dir_git, 'clip_depth', 'coral_spp_narratives.csv'))
   
   spp_depth <- spp_narr %>%
-    select(iucn_sid = species_id, habitat) %>%
+    dplyr::select(iucn_sid = species_id, habitat) %>%
     mutate(paired_map = (iucn_sid %in% spp_map_pairs$iucn_sid))
 
   spp_depth1 <- spp_depth %>%
@@ -211,7 +211,7 @@ coral_comp <- coral_cells_iucn %>%
   as.data.frame()
 
 
-rast_coral_comp <- raster::subs(x = loiczid_raster, y = coral_comp %>% select(loiczid, deep), 
+rast_coral_comp <- raster::subs(x = loiczid_raster, y = coral_comp %>% dplyr::select(loiczid, deep), 
                      by = 'loiczid', which = 'deep', 
                      subsWithNA = TRUE) %>%
   crop(extent(c(-180, 180, -63, 85)))
@@ -256,7 +256,7 @@ coral_cells_iucn <- read_csv(file.path(dir_git, 'clip_depth', 'coral_cells_iucn.
   mutate(deep = ifelse(deep == 1, 'deep', 'shallow'))
 
 hcaf <- read_csv(file.path(dir_anx, '../_raw_data/aquamaps/d2015/csv/hcaf_truncated.csv')) %>%
-  select(loiczid, cellarea, oceanarea)
+  dplyr::select(loiczid, cellarea, oceanarea)
 
 iucn_coral_areas <- coral_cells_iucn %>%
   left_join(hcaf, by = 'loiczid') %>%
@@ -294,7 +294,7 @@ if(!file.exists(file.path(dir_git, 'clip_depth', 'coral_spp_areas.csv'))) {
   
   spp_coralmaps <- read_csv(file.path(dir_data, 'spp_list_w_area_trimmed.csv')) %>%
     filter(iucn_sid %in% coral_cells_iucn_shallow$iucn_sid) %>%
-    select(am_sid, sciname, iucn_sid)
+    dplyr::select(am_sid, sciname, iucn_sid)
   
   ### copy aquamaps cells to local file, keeping only corals in the paired maps
   if(!file.exists(file.path(dir_git, 'clip_depth', 'coral_cells_am.csv'))) {
@@ -326,7 +326,7 @@ if(!file.exists(file.path(dir_git, 'clip_depth', 'coral_spp_areas.csv'))) {
     # sid <- spp_coralmaps$iucn_sid[1]
     i <- i + 1
     sids <- spp_coralmaps %>% 
-      select(am_sid, iucn_sid, sciname) %>%
+      dplyr::select(am_sid, iucn_sid, sciname) %>%
       filter(iucn_sid == sid)
     rowindex <- (spp_coralmaps$iucn_sid == sid)
     
@@ -343,13 +343,13 @@ if(!file.exists(file.path(dir_git, 'clip_depth', 'coral_spp_areas.csv'))) {
       dplyr::select(loiczid, am_pres) %>% 
       unique()
     
-    r_am_spp <- subs(x = loiczid_raster, y = map_am %>% select(loiczid, am_pres), 
+    r_am_spp <- subs(x = loiczid_raster, y = map_am %>% dplyr::select(loiczid, am_pres), 
                      by = 'loiczid', which = 'am_pres', 
                      subsWithNA = TRUE)
     
     ### rasterize IUCN map
     if(TRUE %in% duplicated(map_iucn$loiczid)) stop('Duplicated cells in IUCN map')
-    r_iucn_spp <- subs(loiczid_raster, map_iucn %>% select(loiczid, iucn_pres), 
+    r_iucn_spp <- subs(loiczid_raster, map_iucn %>% dplyr::select(loiczid, iucn_pres), 
                        by = 'loiczid', which = 'iucn_pres', 
                        subsWithNA = TRUE)
   
@@ -402,7 +402,7 @@ if(!file.exists(file.path(dir_git, 'clip_depth', 'coral_spp_areas.csv'))) {
            sm_area = ifelse(area_am < area_iucn, area_am, area_iucn),
            lg_area_pct = 100 * lg_area / max(area_total, na.rm = TRUE)) %>% 
              ### use largest data set as approx for total ocean range
-    select(-lg_area, -sm_area)
+    dplyr::select(-lg_area, -sm_area)
   
   spp_coralmaps <- spp_coralmaps %>%
     mutate(area_total  = round(area_total, 1),
@@ -417,11 +417,11 @@ if(!file.exists(file.path(dir_git, 'clip_depth', 'coral_spp_areas.csv'))) {
   
   ### combine old and new area dataframes
   spp_coralmaps <- spp_coralmaps %>%
-    select(iucn_sid, am_sid, sciname, area_am, 
+    dplyr::select(iucn_sid, am_sid, sciname, area_am, 
            area_iucn_shallow = area_iucn, area_overlap_shallow = area_overlap, 
            sm_perc_shallow = sm_perc, sm_range_shallow = sm_range, area_ratio_shallow = area_ratio) %>%
     left_join(read_csv(file.path(dir_data, 'spp_list_w_area_trimmed.csv')) %>%
-                select(am_sid, iucn_sid, 
+                dplyr::select(am_sid, iucn_sid, 
                        area_iucn_raw = area_iucn, area_overlap_raw = area_overlap, 
                        sm_perc_raw = sm_perc, sm_range_raw = sm_range, area_ratio_raw = area_ratio),
               by = c('iucn_sid', 'am_sid'))
@@ -434,7 +434,7 @@ if(!file.exists(file.path(dir_git, 'clip_depth', 'coral_spp_areas.csv'))) {
 ``` {r generate_area_plots}
 
 spp_coral_clip <- read_csv(file.path(dir_git, 'clip_depth', 'iucn_coral_areas.csv')) %>%
-  select(iucn_sid, shallow_pct, deep_pct, totarea, shallow_area = area) %>%
+  dplyr::select(iucn_sid, shallow_pct, deep_pct, totarea, shallow_area = area) %>%
   mutate(shallow_pct = 100 * shallow_pct,
          deep_pct    = 100 * deep_pct)
 
@@ -563,7 +563,7 @@ dist_align_mean <- 62.98212
 # area_overlap_raw  sm_range_raw  dist  perc  area  ratio  method
 
 iucn_coral_quads <- iucn_coral_fixed %>%
-  select(iucn_sid, sciname, d_perc, a_ratio, method) %>% ### ditch am_sid, b/c duplicates
+  dplyr::select(iucn_sid, sciname, d_perc, a_ratio, method) %>% ### ditch am_sid, b/c duplicates
   distinct() %>%
   mutate(quad = 'q1',
          quad = ifelse(a_ratio < area_align_mean  & d_perc >= dist_align_mean, 'q2', quad),
@@ -577,8 +577,8 @@ iucn_coral_quads <- iucn_coral_fixed %>%
   ungroup()
 
 quad_names <- data.frame('quad' = c('q1', 'q2', 'q3', 'q4'),
-                         'quad_name' = factor(c('well-matched', 'dist-matched', 
-                                                'area-matched', 'poorly matched'),
+                         'quad_name' = factor(c('well-aligned', 'dist-aligned', 
+                                                'area-aligned', 'poorly aligned'),
                                              ordered = TRUE))
 
 iucn_coral_quads <- iucn_coral_quads %>%
@@ -589,7 +589,7 @@ write_csv(iucn_coral_quads, file.path(dir_git, 'clip_depth', 'iucn_coral_quads.c
 break_nums <- seq(0, 100, 20)
 
 iucn_coral_quad_sum <- read_csv(file.path(dir_git, 'clip_depth', 'iucn_coral_quads.csv')) %>%
-  select(method, quad, quad_name, pct_quad) %>%
+  dplyr::select(method, quad, quad_name, pct_quad) %>%
   distinct()
 ### Plot the bar chart
 barchart_coral_quads <- ggplot(iucn_coral_quad_sum, 
@@ -609,15 +609,15 @@ barchart_coral_quads <- ggplot(iucn_coral_quad_sum,
   ### add grid lines; horizontal but then get flipped
   geom_hline(yintercept = break_nums/100, size = 0.25, color = 'white', alpha = .5) +
   coord_flip() +
-  labs(x = 'Taxonomic Group', 
+  labs(x = 'Depth limit', 
        y = 'Percent of corals by quadrant', 
        fill = 'Alignment')
 
 print(barchart_coral_quads)
 
-ggsave(plot = barchart_coral_quads,
-       filename = file.path(dir_fig, 'barchart_coral_quads.png'),
-       width = 19, height = 4, units = 'cm', dpi = 600)
+# ggsave(plot = barchart_coral_quads,
+#        filename = file.path(dir_fig, 'barchart_coral_quads.png'),
+#        width = 19, height = 4, units = 'cm', dpi = 600)
 
 write_csv(iucn_coral_quad_sum, file.path(dir_git, 'clip_depth', 'iucn_coral_quad_sum.csv'))
 
