--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -3,19 +3,23 @@
 
 ## About the datasets
 
-The IUCN publishes species range maps developed by species experts.  These experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A). IUCN guidelines generally recommend that boundaries be drawn as a "minimum convex polygon": "the smallest polygon in which no internal angle exceeds 180 degrees and which contains all the sites of occurrence" [@iucn_iucn_2015].  For the purposes of this analysis, we elected not to use IUCN data for bird species, which are available separately through Bird Life International [@birdlife_international_and_natureserve_bird_2015].
+The IUCN has published species range maps developed by species experts for `r format(n_spp_iucn, big.mark = ',')` unique marine species.  Experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A FIX THIS REF OR THE FIGURE). IUCN guidelines generally recommend that boundaries be drawn as a "minimum convex polygon", i.e. "the smallest polygon in which no internal angle exceeds 180 degrees and which contains all the sites of occurrence" [@iucn_iucn_2015].  
 
-In contrast, AquaMaps models species distribution based on envelopes of environmental preference, such as temperature, depth, and salinity; these preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species (Fig S1B).  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@fao_fisheries_and_aquaculture_department_cwp_2015] boundaries.  Of the resulting maps, 1296 (5.7%) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
+In contrast, AquaMaps has modeled species distribution for `r format(n_spp_am, big.mark = ',')` species based on envelopes of environmental preference, such as temperature, depth, and salinity.  These preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species (Fig S1B FIX THIS REF OR THE FIGURE).  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@fao_fisheries_and_aquaculture_department_cwp_2015] boundaries.  Of the resulting maps, 1,296 (5.7% of the full dataset) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
+
+In total, the two datasets provide range maps for `r format(n_spp_all, big.mark = ',')` species, with a small subset of species mapped in both datasets.  For the purposes of this analysis, we elected not to use IUCN data for bird species, which are available separately through Bird Life International [@birdlife_international_and_natureserve_bird_2015].
 
 <!--
 OMIT: Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., previously, the Ocean Health Index defined presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].  In the 2016 OHI assessment, the presence threshold was eliminated, to better approximate the "extent of occurrence" generally indicated by IUCN maps, since the two datasets are used together
 -->
 
 __Comparison of taxonomic and regional distribution__:
-To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; we determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell  (Fig S2)  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps.
+To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps.  We determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell (Fig S2).  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence to best approximate the "extent of occurrence" generally indicated by IUCN maps.
 
 __Comparison of paired maps__:
-Species range maps communicate a prediction of both the distribution of a species and the size of a species range.  To enable direct comparison of these measures between the two datasets, we identified "paired map" species, i.e. the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution, using genus and species binomials as a matching key.  We used the taxize package [@scott_chamberlain_taxize_2013] in R [@r_core_team_r:_2016] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population.   For each of these paired map species, we determined species presence within each spatial cell for each dataset using the same criteria outlined above.
+Although relatively small in number, overlap species present a unique opportunity to evaluate the two datasets overall.  For the species included in both datasets, we examine how well the maps align in both spatial distribution and overall area.  Based upon the definitions of extent of occurrence and area of occupancy, we expect that for a given species, the AquaMaps predicted distribution will fall within, and describe a smaller range than, the IUCN predicted distribution.  Where these expectations seem to fail, we explore methodological issues that can introduce errors.
+
+We identified "paired map" species using genus and species binomials as a matching key.  We used the taxize package [@scott_chamberlain_taxize_2013] in R [@r_core_team_r:_2016] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population.   For each of these paired map species, we determined species presence within each spatial cell for each dataset using the same criteria outlined above.
 
 Overlaying paired distribution maps for each species, we defined and calculated _distribution alignment_ $\alpha_{dist}$ and _area ratio_ $\alpha_{area}$:
 
@@ -23,30 +27,18 @@ $$\alpha_{dist} = \frac{A_{small \cap large}}{A_{large}} * 100\%$$
 
 $$\alpha_{area} = \frac{A_{small}}{A_{large}} * 100\%$$
 
-For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as a measure of concurrence between the two datasets.  Area ratio compares range size, used by IUCN as a criterion to help define extinction risk; it also provides a proxy for frequency of commission and/or omission errors.
+For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset) in km^2^.  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as a measure of concurrence between the two datasets.  Area ratio compares range size, used by IUCN as a criterion to help define extinction risk; it also provides an indicator for frequency of commission and/or omission errors.
 
 __Examining issues in paired map alignment__:
-Corals provide a useful case study to examine differences in species range alignment.  Corals are an intensely studied taxonomic group whose importance in supporting biodiversity is undisputed; their dependence on photosynthesis provides habitat-limiting life history traits, and they don't tend to move.  Extracting data from the IUCN API [@iucn_iucn_2015] we identified depth limitations of each coral species mapped in the IUCN dataset to verify that none are found below the photosynthetic depth limit of 200 m.  Using the same methodology as shown in Fig 2, we created a 200 m bathymetry raster from a 200 m bathymetry spatial dataset (public domain; available from Natural Earth, www.naturalearthdata.com) and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
+Given the wide variation in the alignment of predicted range for the paired map species, we examined two potential drivers of error, one for each dataset.  For IUCN data, we explored the assumed consideration of depth as a criterion for range predictions of coral species, a large portion (14%) of the IUCN dataset and an intensely studied taxonomic group whose importance in supporting biodiversity is undisputed.  Extracting data from the IUCN API [@iucn_iucn_2015] we identified depth limitations of each coral species mapped in the IUCN dataset to verify that none is found below the photosynthetic depth limit of 200 m.  Using the same methodology as shown in Fig S2, we created a 200 m bathymetry raster from a bathymetry spatial dataset (public domain; available from Natural Earth, www.naturalearthdata.com) and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps ranges to examine distribution alignment and area ratio.
 
-AquaMaps' reliance upon FAO zones to constrain species ranges seems likely to result in abrupt species range boundaries where ecologically suitable habitat intersects with human-defined borders.  To explore the impact of these artificial constraints on species range predictions, we chose to focus on boundaries defined by longitude, as they seem less likely to coincide with ecological differences than boundaries defined by latitude.  As an example, we identified all AquaMaps species whose eastern or western range limit between between 25° S and 20° N latitudes coincided with the large vertical boundary between FAO regions 71 and 77 at 175° W longitude.
+For AquaMaps data, whose reliance upon FAO Major Fishing Areas to constrain species ranges seems likely to result in abrupt discontinuities in species range where ecologically suitable habitat intersects with human-defined borders, we identified FAO boundaries where such discontinuities are likely to occur.  Cropping species distributions to narrow latitudinal bands, we determined species whose eastern or western range limit coincided exactly with a defined FAO boundary.  As an illustrative example, we cropped AquaMaps range maps for Indo-Pacific species to a band between between 25° S and 20° N latitudes, then identified all species whose eastern range limit within this band coincided with 175° W longitude, the vertical boundary between FAO regions 71 and 77.
 
-The oceans abound with rare and poorly-understood species which offer sparse information on behavior and habitat preferences to inform models and expert opinion.  To identify such data-poor species within the set of paired map species, we used R clients for OBIS [@obis_data_2016] and GBIF [@gbif_global_2010] to identify known occurrences of each species; occurrences were averaged between the two occurrence databases as a proxy for data richness.
-
-<!--
-
-## Methods for Ocean Health Index (OHI) case study
-
-The global Ocean Health Index (OHI) [@halpern_index_2012; @halpern_patterns_2015], a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data to calculate biodiversity status for each of the world's 221 exclusive economic zones. 
-
-The Species component of the OHI Biodiversity goal (abbreviated as SPP) uses IUCN Red List extinction risk as a proxy for a species' health.  Each species is assigned a risk score based on IUCN Red List extinction risk category, from Least Concern (0.0) to Extinct (1.0) (Data Deficient and unassessed species are excluded).  Species range is determined from its IUCN range map, where available, or its AquaMaps range map if an IUCN map is unavailable.  For each assessed OHI region, an area-weighted mean extinction risk across all species is calculated, and rescaled to calculate a status score from 0 (mean extinction risk = 0.75) to 100 (mean extinction risk = 0) [@halpern_index_2012; @halpern_patterns_2015].
-
-_To highlight the differences in the datasets, we recalculated the OHI SPP status values using only one complete dataset at a time, and compared to the values resulting from the combined datasets.  For the AquaMaps dataset, we used a "probability of occurrence" threshold of 0% to determine presence, to align with the OHI 2016 assessment._  
-
--->
+Range maps for data-poor species are more likely to introduce errors, whether by commission (false indication of presence) or omission (false indication of absence).  This is likely to be evident as poor alignment between range maps for paired-map species.  To explore the impact of empirical measures of species occurrence on range predictions, we used R clients for OBIS [@obis_data_2016] and GBIF [@gbif_global_2010] to count occurrence records for each paired-map species; these counts were averaged for each species as a proxy for data richness.
 
 ## Methods for MPA Gap Analysis case study
 To assess the effectiveness of MPAs in protecting biodiversity, Klein et al. [-@klein_shortfalls_2015] compared the coverage of the global MPA network presented by the World Database on Protected Areas (WDPA) [@iucn_world_2014] to the species ranges described in the 2014 AquaMaps dataset [@kaschner_aquamaps:_2015].  For the primary analysis, the researchers defined species presence as 50% or greater probability of occurrence.
 
-To reconstruct the primary analysis, we selected the subset of protected areas from the 2014 WDPA dataset classified as IUCN protected area management categories I-IV and spatially overlapping a marine area. The WDPA polygons and marine polygons were rasterized to 0.01° and then aggregated to AquaMaps native 0.5° cells, to calculate proportion of marine protected area within each cell.  After verifying our results using the 2014 AquaMaps dataset, we updated the analysis to use the 2015 AquaMaps dataset, at a presence threshold of 50% (to compare to Klein et al. directly) and 0% (to better compare with IUCN spatial data).  To analyze MPA coverage against IUCN spatial data, we extracted IUCN polygon weights per 0.5° cell for each species and compared against the protected area raster.  Finally, we combined AquaMaps data (at 0% threshold) and IUCN data, using AquaMaps for the `r format(n_spp_both, big.mark = ',')` overlapping species and again compared against the protected area raster.
+To reconstruct the primary analysis, we selected the subset of protected areas from the 2014 WDPA dataset classified as IUCN protected area management categories I-IV and spatially overlapping a marine area. The WDPA polygons and marine polygons were rasterized to 0.01° and then aggregated to AquaMaps native 0.5° cells, to calculate proportion of marine protected area within each cell.  After verifying our method using the 2014 AquaMaps dataset, we updated the analysis to use the 2015 AquaMaps dataset, at a presence threshold of 50% (to compare to Klein et al. directly) and 0% (to better compare with IUCN spatial data).  To analyze MPA coverage against IUCN spatial data, we extracted IUCN polygon weights per 0.5° cell for each species and compared against the protected area raster.
 
 All processing was completed using R statistical software [@r_core_team_r:_2016], and all code and intermediate data are available on GitHub at https://github.com/OHI-Science/IUCN-AquaMaps.
