--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -85,9 +85,12 @@ From the entirety of the AquaMaps dataset, we identified 3,208 Indo-Pacific spec
 
 FAO Major Fishing Area boundaries provide a readily available method to roughly constrain AquaMaps predictions to appropriate ocean basins, thus eliminating a large source of potential commission errors and enabling rapid modeling of thousands of species ranges.  However, these boundaries are defined for statistical purposes based on economic and political considerations rather than ecological considerations, and can result in odd discontinuities in species range predictions where otherwise suitable habitat is excluded.  While such a discontinuous boundary would likely be obvious when inspecting the distribution of an individual species, the distinction is likely to be obscured when aggregating many species ranges as is typical for biodiversity or conservation studies.  
 
-The 3,208 species range maps included in Fig 4 tend to extrapolate farther based on limited data: a median predicted range of 452,000 km^2^ per "occurcell" compared to a median predicted range of 158,000 km^2^ per "occurcell" for the overall AquaMaps dataset.  This suggests that the FAO boundaries may not be sufficient to adequately constrain computer-generated ranges.  To reduce the incidence of commission errors due to aggressive extrapolation, it may be desirable to fine-tune the computer model output with additional filters, including ecosystem-based constraints such as Marine Ecoregions of the World [@spalding_marine_2007] or methods such as inverse distance weighting to enforce proximity to known observations.  Expert review, though time-consuming, is the most certain route to boosting confidence in these predicted distributions.
+The ratio of the total predicted range for a species to the number of "occurcells" used to generate the map provides a measure of the degree to which AquaMaps extrapolates range area from limited data.  For example, AquaMaps predicts a total range of 5.4 million km^2^ for both the round ray _Rajella fyllae_ and the brittle star _Ophiothrix plana_; but the map for _R. fyllae_ is generated using 116 "occurcells" (for a data extrapolation rate of 46,800 km^2^ per cell) while the map for _O. plana_ is generated using only four (for an extrapolation rate of 1,360,000 km^2^ per cell).
+
+By this measure, the 3,208 species range maps included in Fig 4 tend to extrapolate farther based on limited data: a median predicted range of 452,000 km^2^ per "occurcell" compared to a median predicted range of 158,000 km^2^ per "occurcell" for the overall AquaMaps dataset.  This suggests that the FAO boundaries may not be sufficient to adequately constrain computer-generated ranges.  To reduce the incidence of commission errors due to aggressive extrapolation, it may be desirable to fine-tune the computer model output with additional filters, including ecosystem-based constraints such as Marine Ecoregions of the World [@spalding_marine_2007] or methods such as inverse distance weighting to enforce proximity to known observations.  Expert review, though time-consuming, is the most certain route to boosting confidence in these predicted distributions.
 
 ## Case Study: MPA Gap Analysis
+
 
 Klein et al. [-@klein_shortfalls_2015] compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the 2014 version of the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
 
@@ -97,7 +100,7 @@ We recalculated the amount of under-protected and gap species using all availabl
 
 > __Fig 5.__  Percent of species range covered by MPAs based upon methods in Klein et al. (2015).  Scenario 1 replicates the original results, measuring protected range of species in AquaMaps 2014 dataset, with a 50% presence threshold, against the 2014 World Database of Protected Areas, filtered for IUCN categories I-IV that overlap marine areas.  Scenario 2 updates the results using AquaMaps 2015, showing very small changes despite the inclusion of an additional 5,545 species.  Scenario 3, using 2015 AquaMaps data, drops the presence threshold to zero, showing an expected decrease in gap species, but also a decrease in species with 5% or greater protected range.  Scenario 4 examines species MPA coverage using only the IUCN dataset.
 
-To achieve more comprehensive taxonomic coverage of species ranges it may be desirable to use these two datasets together.  The Ocean Health Index (OHI) is one major analysis that merges IUCN and AquaMaps spatial data, in conjunction with extinction risk categories from the IUCN Red List of Threatened Species, to calculate area-weighted extinction risks for the Species component of the index.  To combine these data sets, OHI uses all available IUCN range maps, and then supplements with AquaMaps data (with "presence" determined by 40% or greater probability of occurrence) for species whose ranges are not represented within IUCN; species without valid Red List extinction risk categories are excluded from analysis [@halpern_index_2012; @halpern_patterns_2015].  Such a combination of two inherently different datasets increases the number of species represented within the analysis, but the differences in range representations between the datasets is likely to distort the results.  
+To achieve more comprehensive taxonomic coverage of species ranges it may be desirable to use these two datasets together.  The Ocean Health Index (OHI) is one analysis that uses both IUCN and AquaMaps spatial data, in conjunction with extinction risk categories from the IUCN Red List of Threatened Species, to calculate area-weighted extinction risks for the Species component of the index.  To combine these data sets, OHI uses all available IUCN range maps, and then supplements with AquaMaps data (with "presence" determined by 40% or greater probability of occurrence) for species whose ranges are not represented within IUCN; species without valid Red List extinction risk categories are excluded from analysis [@halpern_index_2012; @halpern_patterns_2015].  Such a combination of two inherently different datasets increases the number of species represented within the analysis, but the differences in range representations between the datasets is likely to distort the results.  
 
 While it may be unrealistic to "fix" one data set to match the other, we may be able to reduce the impact of the tradeoffs inherent in each.  Trimming unsuitable habitat from the IUCN's extent of occurrence maps, for example by explicitly clipping them to appropriate depths for corals and reef-associated species, would result in maps that more closely approximate areas of occupancy.  Conversely, including all AquaMaps cells with a non-zero "probability of occurrence" (rather than using a probability threshold to determine presence, e.g. greater than 40% for the Ocean Health Index [@halpern_index_2012; @halpern_patterns_2015] or 50% for the MPA gap analysis [@klein_shortfalls_2015]) would allow for the most generous inclusion of species range, resulting in maps that more closely, though still imperfectly, approach the IUCN's extents of occurrence.
 
