--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -3,9 +3,9 @@
 
 ## About the datasets
 
-The IUCN has published species range maps developed by species experts for `r format(n_spp_iucn, big.mark = ',')` unique marine species.  Experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A FIX THIS REF OR THE FIGURE). IUCN guidelines generally recommend that boundaries be drawn as a "minimum convex polygon", i.e. "the smallest polygon in which no internal angle exceeds 180 degrees and which contains all the sites of occurrence" [@iucn_iucn_2015].  
+The IUCN has published species range maps developed by species experts for `r format(n_spp_iucn, big.mark = ',')` unique marine species.  Experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences ___(Fig S1A FIX THIS REF OR THE FIGURE)___. IUCN guidelines recommend that boundaries be drawn as a "minimum convex polygon", i.e. "the smallest polygon in which no internal angle exceeds 180 degrees and which contains all the sites of occurrence" [@iucn_iucn_2015].  
 
-In contrast, AquaMaps has modeled species distribution for `r format(n_spp_am, big.mark = ',')` species based on envelopes of environmental preference, such as temperature, depth, and salinity.  These preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species (Fig S1B FIX THIS REF OR THE FIGURE).  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@fao_fisheries_and_aquaculture_department_cwp_2015] boundaries.  Of the resulting maps, 1,296 (5.7% of the full dataset) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
+In contrast, AquaMaps has modeled species distribution for `r format(n_spp_am, big.mark = ',')` species based on envelopes of environmental preference, such as temperature, depth, and salinity.  These preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species ___(Fig S1B FIX THIS REF OR THE FIGURE)___.  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@fao_fisheries_and_aquaculture_department_cwp_2015] boundaries.  Of the resulting maps, 1,296 (5.7% of the full dataset) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
 
 In total, the two datasets provide range maps for `r format(n_spp_all, big.mark = ',')` species, with a small subset of species mapped in both datasets.  For the purposes of this analysis, we elected not to use IUCN data for bird species, which are available separately through Bird Life International [@birdlife_international_and_natureserve_bird_2015].
 
@@ -27,14 +27,12 @@ $$\alpha_{dist} = \frac{A_{small \cap large}}{A_{large}} * 100\%$$
 
 $$\alpha_{area} = \frac{A_{small}}{A_{large}} * 100\%$$
 
-For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset) in km^2^.  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as a measure of concurrence between the two datasets.  Area ratio compares range size, used by IUCN as a criterion to help define extinction risk; it also provides an indicator for frequency of commission and/or omission errors.
+For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset) in km^2^.  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as a measure of concurrence between the two datasets.  Area ratio compares range size, used by IUCN as a criterion to help define extinction risk; it also provides an indicator for frequency of errors of commission (false indication of presence) or omission (false indication of absence).
 
 __Examining issues in paired map alignment__:
 Given the wide variation in the alignment of predicted range for the paired map species, we examined two potential drivers of error, one for each dataset.  For IUCN data, we explored the assumed consideration of depth as a criterion for range predictions of coral species, a large portion (14%) of the IUCN dataset and an intensely studied taxonomic group whose importance in supporting biodiversity is undisputed.  Extracting data from the IUCN API [@iucn_iucn_2015] we identified depth limitations of each coral species mapped in the IUCN dataset to verify that none is found below the photosynthetic depth limit of 200 m.  Using the same methodology as shown in Fig S2, we created a 200 m bathymetry raster from a bathymetry spatial dataset (public domain; available from Natural Earth, www.naturalearthdata.com) and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps ranges to examine distribution alignment and area ratio.
 
-For AquaMaps data, whose reliance upon FAO Major Fishing Areas to constrain species ranges seems likely to result in abrupt discontinuities in species range where ecologically suitable habitat intersects with human-defined borders, we identified FAO boundaries where such discontinuities are likely to occur.  Cropping species distributions to narrow latitudinal bands, we determined species whose eastern or western range limit coincided exactly with a defined FAO boundary.  As an illustrative example, we cropped AquaMaps range maps for Indo-Pacific species to a band between between 25° S and 20° N latitudes, then identified all species whose eastern range limit within this band coincided with 175° W longitude, the vertical boundary between FAO regions 71 and 77.
-
-Range maps for data-poor species are more likely to introduce errors, whether by commission (false indication of presence) or omission (false indication of absence).  This is likely to be evident as poor alignment between range maps for paired-map species.  To explore the impact of empirical measures of species occurrence on range predictions, we used R clients for OBIS [@obis_data_2016] and GBIF [@gbif_global_2010] to count occurrence records for each paired-map species; these counts were averaged for each species as a proxy for data richness.
+For AquaMaps data, whose reliance upon FAO Major Fishing Areas [@fao_fisheries_and_aquaculture_department_cwp_2015] to constrain species ranges seems likely to result in abrupt discontinuities in species range where ecologically suitable habitat intersects with human-defined borders, we identified FAO boundaries where such discontinuities are likely to occur.  Cropping species distributions to narrow latitudinal bands, we determined species whose eastern or western range limit coincided exactly with a defined FAO boundary.  As an illustrative example, we cropped AquaMaps range maps for all Pacific and Indian Ocean species to a band between between 25° S and 20° N latitudes, then identified all species whose eastern range limit within this band coincided with 175° W longitude, the vertical boundary between two prominent FAO regions.
 
 ## Methods for MPA Gap Analysis case study
 To assess the effectiveness of MPAs in protecting biodiversity, Klein et al. [-@klein_shortfalls_2015] compared the coverage of the global MPA network presented by the World Database on Protected Areas (WDPA) [@iucn_world_2014] to the species ranges described in the 2014 AquaMaps dataset [@kaschner_aquamaps:_2015].  For the primary analysis, the researchers defined species presence as 50% or greater probability of occurrence.
